--- a/index.html
+++ b/index.html
@@ -66,26 +66,31 @@
             </div>
         </section>
         <section class="section.about">
+            <div class="container">
             <h2 class="promo-title list">What are we doing</h2>
             <ul class="promo-subject list">
                 <li>
-                    <img src="./images/monitor.jpg" alt="monitor" width="360" height="300">
+                    <img src="./images/monitor.jpg" alt="monitor" width="360" height="300" style>
                 </li>
                 <li>
-                    <img src="./images/smartfon.jpg" alt="smartfon" width="360" height="300">
+                    <img src="./images/smartfon.jpg" alt="smartfon" width="360" height="300" style>
                 </li>
                 <li>
-                    <img src="./images/noutbuk.jpg" alt="noutbuk" width="360" height="300">
+                    <img src="./images/noutbuk.jpg" alt="noutbuk" width="360" height="300" style>
                 </li>
             </ul>
+            </div>
         </section>
-        <section class="section">
+        <section class="section-team">
+            <div class="container">
             <h2 class="team-title list">Our Team</h2>
             <ul class="team-list list">
-                <li class="team-info">
-                    <img src="./images/img-1.jpg" alt="mark" width="264" height="260">
+                <li class="team-info">                    
+                    <img src="./images/img-1.jpg" alt="mark" width="264" height="260" style>
+                    <div class="team-style">
                     <h3 class="team-title-name">Mark Guerrero</h3>
                     <p class="team-text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-info">
                     <img src="./images/img-2.jpg" alt="tom" width="264" height="260">
@@ -103,14 +108,19 @@
                     <p class="team-text">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
    
     <footer class="footer">
+        <div class="container">
+            <div class="footer-container">
         <a class="footer-logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and
             sales for your business with digital
             marketing & growth solutions.</p>
+            </div>
+        </div>
     </footer>
 </body>
 
