--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,8 @@
     </header>
     <main>
 <section class="section.portfolio">
-    <h1 class="menu-title" hidden >menu</h1>
+    <div class="container">
+    <h1 class="visually-hidden">menu</h1>
     <ul class="menu-btn list">
         <li><button class="all-btn" type="button">All</button></li>
         <li><button class="all-btn" type="button">Web Site</button></li>
@@ -45,9 +46,11 @@
     <ul class="gallery list">
         <li>  
         <a class="gallery-tabl link" href="">
-        <img src="./images/img-banking.jpg" alt="banking" width="360"/>
+        <img src="./images/img-banking.jpg" alt="banking" width="360" styles/>
+        <div class="gallery-container">
         <h2 class="gallery-title">Banking App Interface Concept</h2>
         <p class="gallery-text">App</p>
+        </div>
         </a>          
         </li>
                                     
@@ -99,6 +102,7 @@
         <p class="gallery-text">Web Site</p> </a>                       
         </li>
     </ul>
+    </div>
  </section>
     </main>
 
