--- a/portfolio.html
+++ b/portfolio.html
@@ -131,8 +131,12 @@
     </main>
 
     <footer class="footer">
-        <a class="footer-logo" href="./index.html">WebStudio</a>
-        <p class="footer-text">Increase the flow of customers and
-            sales for your business with digital
-            marketing & growth solutions.</p>
+        <div class="container">
+            <div class="footer-container">
+                <a class="footer-logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and
+                    sales for your business with digital
+                    marketing & growth solutions.</p>
+            </div>
+        </div>
     </footer>
