--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto+Mono:wght@600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/modern-normalize.css"/>
+    
 </head>
 
 <body>
     <header class="header"> 
-        <div class="header-container">
+        <div class="container header-container">
         <nav class="header-nav">
             <a class="header-logo link" href="./portfolio.html">Web<span class="header-span">Studio</span></a>
             <ul class="header-list list">                
@@ -66,9 +69,9 @@
             </ul>
             </div>
         </section>
-        <section class="section.about">
+        <section class="section about">
             <div class="container">
-            <h2 class="promo-title list">What are we doing</h2>
+            <h2 class="promo-title">What are we doing</h2>
             <ul class="promo-subject list">
                 <li>
                     <img src="./images/monitor.jpg" alt="monitor" width="360" height="300" style>
@@ -84,7 +87,7 @@
         </section>
         <section class="section team">
             <div class="container">
-            <h2 class="team-title list">Our Team</h2>
+            <h2 class="promo-title">Our Team</h2>
             <ul class="team-list list">
                 <li class="team-info">                    
                     <img src="./images/img-1.jpg" alt="mark" width="264" height="260" style>
