--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto+Mono:wght@600&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
+
 </head>
 
 <body>
     <header class="header">
-        <div class="header-container">
+        <div class="container header-container">
             <nav class="header-nav">
                 <a class="header-logo link" href="./portfolio.html">Web<span class="header-span">Studio</span></a>
                 <ul class="header-list list">
@@ -38,8 +41,9 @@
     </header>
     <main>
 <section class="section.portfolio">
-    <div class="container"> 
+    <div class="container">
     <h1 class="visually-hidden">menu</h1>
+    
     <ul class="menu-btn list">
         <li><button class="all-btn" type="button">All</button></li>
         <li><button class="all-btn" type="button">Web Site</button></li>
