--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
             <h2 class="promo-title">What are we doing</h2>
             <ul class="promo-subject list">
                 <li>
-                    <img src="./images/monitor.jpg" alt="monitor" width="360" height="300" style>
+                    <img class="img" src="./images/monitor.jpg" alt="monitor" width="360" height="300" style>
                 </li>
                 <li>
-                    <img src="./images/smartfon.jpg" alt="smartfon" width="360" height="300" style>
+                    <img class="img" src="./images/smartfon.jpg" alt="smartfon" width="360" height="300" style>
                 </li>
                 <li>
-                    <img src="./images/noutbuk.jpg" alt="noutbuk" width="360" height="300" style>
+                    <img class="img" src="./images/noutbuk.jpg" alt="noutbuk" width="360" height="300" style>
                 </li>
             </ul>
             </div>
@@ -90,28 +90,28 @@
             <h2 class="promo-title">Our Team</h2>
             <ul class="team-list list">
                 <li class="team-info">                    
-                    <img src="./images/img-1.jpg" alt="mark" width="264" height="260" style>
+                    <img class="img" src="./images/img-1.jpg" alt="mark" width="264" height="260" style>
                     <div class="team-style">
                     <h3 class="team-title-name">Mark Guerrero</h3>
                     <p class="team-text">Product Designer</p>
                     </div>
                 </li>
                 <li class="team-info">
-                    <img src="./images/img-2.jpg" alt="tom" width="264" height="260" style>
+                    <img class="img" src="./images/img-2.jpg" alt="tom" width="264" height="260" style>
                     <div class="team-style">
                     <h3 class="team-title-name">Tom Ford</h3>
                     <p class="team-text">Frontend Developer</p>
                     </div>
                 </li>
                 <li class="team-info">
-                    <img src="./images/img-3.jpg" alt="camila" width="264" height="260" style>
+                    <img class="img" src="./images/img-3.jpg" alt="camila" width="264" height="260" style>
                     <div class="team-style">
                     <h3 class="team-title-name">Camila Garcia</h3>
                     <p class="team-text">Marketing</p>
                     </div>
                 </li>
                 <li class="team-info">
-                    <img src="./images/img-4.jpg" alt="daniel" width="264" height="260" style>
+                    <img class="img" src="./images/img-4.jpg" alt="daniel" width="264" height="260" style>
                     <div class="team-style">
                     <h3 class="team-title-name">Daniel Wilson</h3>
                     <p class="team-text">UI Designer</p>
