--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         </div>
     </header>
     <main>
-<section class="section.portfolio">
+<section class="section-portfolio">
     <div class="container">
     <h1 class="visually-hidden">menu</h1>
     
